feat(example): added example notebook

--- a/Getting-Started/hello-world/my_agent.ipynb
+++ b/Getting-Started/hello-world/my_agent.ipynb
@@ -195,7 +195,7 @@
     "    content_preview = content.strip().replace(\"\\n\", \" \")\n",
     "    content_preview = (content_preview[:100] + \"...\") if len(content_preview) > 100 else content_preview\n",
     "    tool_calls = msg.get(\"tool_calls\", \"\")\n",
-    "    tool_calls_json = json.dumps(tool_calls, indent=2) if tool_calls else \"\"\n",
+    "    tool_calls_json = json.dumps(tool_calls) if tool_calls else \"\"\n",
     "    table.append([role, content_preview, tool_calls_json])\n",
     "\n",
     "print(tabulate(table, headers=[\"Role\", \"Content\", \"Tool Calls\"], tablefmt=\"grid\"))"
