docs: improving examples

--- a/Getting-Started/python/hello-world/my_agent.ipynb
+++ b/Getting-Started/python/hello-world/my_agent.ipynb
@@ -21,7 +21,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "b'{\"stdout\":\"bG9hZGluZyBhZ2VudCBmOTFmNmViNy0zZWFkLTQzM2MtOWQ2OC05OGQ0NzhiYjNkYWYK\"}\\n'\n"
+      "b'{\"stdout\":\"bG9hZGluZyBhZ2VudCBmOTFmNmViNy0zZWFkLTQzM2MtOWQ2OC05OGQ0NzhiYjNkYWYK\"}\\n'\n",
+      "b'{\"stdout\":\"cnVubmluZyB0b29sIHhwZmluaXNoLWFnZW50LWV4ZWN1dGlvbi1maW5pc2hlZCBvbiBhZ2VudCBmOTFmNmViNy0zZWFkLTQzM2MtOWQ2OC05OGQ0NzhiYjNkYWYgd2l0aCBleGVjdXRpb24gYTI0YWZhMjYtNjQxYS00NGYxLTkxZDktMDZjOGUzMmU1ODQyCg==\"}\\n'\n",
+      "b'{\"stdout\":\"cnVubmluZyB0b29sIHhwZmluaXNoLWFnZW50LWV4ZWN1dGlvbi1maW5pc2hlZCBvbiBhZ2VudCBmOTFmNmViNy0zZWFkLTQzM2MtOWQ2OC05OGQ0NzhiYjNkYWYgd2l0aCBleGVjdXRpb24gZjNlZDczZGItNDI2My00ZWI5LTg4ZDQtZWJiOTVkZDQ0ZDY5Cg==\"}\\n'\n"
      ]
     }
    ],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "474c2e08",
    "metadata": {},
    "outputs": [],
@@ -218,10 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8125abf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-06-27 15:35:38.235\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36mchat\u001b[0m:\u001b[36m79\u001b[0m - \u001b[1m🧠 Adding task to a new thread\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:46.617\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m114\u001b[0m - \u001b[1m🪄 Starting Agent Loop\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:48.200\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m120\u001b[0m - \u001b[1m--------------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:48.200\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m121\u001b[0m - \u001b[1m🔍 Step 1\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:50.839\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mproviders.llms.openai.async_client\u001b[0m:\u001b[36minvoke_model\u001b[0m:\u001b[36m87\u001b[0m - \u001b[1m🔄 Model response received in 2.53 s\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:50.840\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mproviders.llms.openai.async_client\u001b[0m:\u001b[36minvoke_model\u001b[0m:\u001b[36m93\u001b[0m - \u001b[1m🔄 Tool call function name: xpfinish-agent-execution-finished\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:54.611\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m178\u001b[0m - \u001b[1m✅ xpfinish-agent-execution-finished\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:54.612\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m180\u001b[0m - \u001b[1m🔢 Step 1 tokens used: 3511 (output: 46, input: 3465)\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:54.914\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m186\u001b[0m - \u001b[1m✨ Execution duration: 8.30 s\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:54.918\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m189\u001b[0m - \u001b[1m🔢 Total tokens used: 3511 (output: 46, input: 3465)\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:55.027\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36mchat\u001b[0m:\u001b[36m83\u001b[0m - \u001b[1m--------------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:35:55.029\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36mchat\u001b[0m:\u001b[36m84\u001b[0m - \u001b[1m🤖 Agent response: Hello! How can I assist you today?\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "thread = await agent.chat(\"Hi!\")"
    ]
@@ -239,10 +260,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "result-1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status:  COMPLETED\n",
+      "result:  Hello! How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "execution_result = xpander_agent.retrieve_execution_result()\n",
     "print(\"status: \", execution_result.status.value)\n",
@@ -260,10 +290,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "08621eb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The agent's thread:\n",
+      "+-----------+---------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| Role      | Content                                                                                                 | Tool Calls                                                                                                                                                                                                                                                             |\n",
+      "+===========+=========================================================================================================+========================================================================================================================================================================================================================================================================+\n",
+      "| system    | Your General instructions: You can use the tools to generate images and text. You can also use the t... |                                                                                                                                                                                                                                                                        |\n",
+      "+-----------+---------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| user      | Hi!                                                                                                     |                                                                                                                                                                                                                                                                        |\n",
+      "+-----------+---------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| assistant |                                                                                                         | [{\"id\": \"call_nwlf32oIcFmkYnedGs0MOfUy\", \"type\": \"function\", \"function\": {\"name\": \"xpfinish-agent-execution-finished\", \"arguments\": \"{\\\"bodyParams\\\":{\\\"result\\\":\\\"Hello! How can I assist you today?\\\",\\\"is_success\\\":true},\\\"queryParams\\\":{},\\\"pathParams\\\":{}}\"}}] |\n",
+      "+-----------+---------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "| tool      | \"Hello! How can I assist you today?\"                                                                    |                                                                                                                                                                                                                                                                        |\n",
+      "+-----------+---------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The agent's thread:\")\n",
     "messages = xpander_agent.messages\n",
@@ -279,7 +328,7 @@
     "    tool_calls_json = json.dumps(tool_calls) if tool_calls else \"\"\n",
     "    table.append([role, content_preview, tool_calls_json])\n",
     "\n",
-    "print(tabulate(table, headers=[\n",
+    "print(tabulate.tabulate(table, headers=[\n",
     "      \"Role\", \"Content\", \"Tool Calls\"], tablefmt=\"grid\"))"
    ]
   },
@@ -294,10 +343,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b275c5e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-06-27 15:36:12.233\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36mchat\u001b[0m:\u001b[36m76\u001b[0m - \u001b[1m🧠 Adding task to existing thread: 34a82c9a-2a82-4ec2-ac80-089c5c1671da\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:15.508\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m114\u001b[0m - \u001b[1m🪄 Starting Agent Loop\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:15.714\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m120\u001b[0m - \u001b[1m--------------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:15.714\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m121\u001b[0m - \u001b[1m🔍 Step 1\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:19.065\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mproviders.llms.openai.async_client\u001b[0m:\u001b[36minvoke_model\u001b[0m:\u001b[36m87\u001b[0m - \u001b[1m🔄 Model response received in 3.22 s\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:19.066\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mproviders.llms.openai.async_client\u001b[0m:\u001b[36minvoke_model\u001b[0m:\u001b[36m93\u001b[0m - \u001b[1m🔄 Tool call function name: xpfinish-agent-execution-finished\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:23.371\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m178\u001b[0m - \u001b[1m✅ xpfinish-agent-execution-finished\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:23.372\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m180\u001b[0m - \u001b[1m🔢 Step 1 tokens used: 3624 (output: 150, input: 3474)\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:23.710\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m186\u001b[0m - \u001b[1m✨ Execution duration: 8.20 s\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:23.712\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36m_agent_loop\u001b[0m:\u001b[36m189\u001b[0m - \u001b[1m🔢 Total tokens used: 3624 (output: 150, input: 3474)\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:23.812\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36mchat\u001b[0m:\u001b[36m83\u001b[0m - \u001b[1m--------------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[32m2025-06-27 15:36:23.813\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmy_agent\u001b[0m:\u001b[36mchat\u001b[0m:\u001b[36m84\u001b[0m - \u001b[1m🤖 Agent response: Hello! I can help you with a variety of tasks, including:\n",
+      "\n",
+      "- Answering questions and providing explanations on many topics\n",
+      "- Generating and editing text, such as emails, summaries, or creative writing\n",
+      "- Creating and editing images based on your descriptions\n",
+      "- Assisting with code generation, debugging, and code reviews\n",
+      "- Managing GitHub pull requests, including creating, updating, and commenting on them\n",
+      "- Downloading files from the internet and reading local files (in a sandboxed environment)\n",
+      "\n",
+      "Let me know what you need help with!\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'34a82c9a-2a82-4ec2-ac80-089c5c1671da'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "await agent.chat(\"What can you do ?\", thread)"
    ]
@@ -315,10 +402,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "result-2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status:  COMPLETED\n",
+      "result:  Hello! I can help you with a variety of tasks, including:\n",
+      "\n",
+      "- Answering questions and providing explanations on many topics\n",
+      "- Generating and editing text, such as emails, summaries, or creative writing\n",
+      "- Creating and editing images based on your descriptions\n",
+      "- Assisting with code generation, debugging, and code reviews\n",
+      "- Managing GitHub pull requests, including creating, updating, and commenting on them\n",
+      "- Downloading files from the internet and reading local files (in a sandboxed environment)\n",
+      "\n",
+      "Let me know what you need help with!\n"
+     ]
+    }
+   ],
    "source": [
     "execution_result = xpander_agent.retrieve_execution_result()\n",
     "print(\"status: \", execution_result.status.value)\n",
