feat: (publish SWE Agent workshop)

--- a/notebooks/swe-agent-workshop.ipynb
+++ b/notebooks/swe-agent-workshop.ipynb
@@ -599,22 +599,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RunResponse(content='The task to create a new Streamlit app named **Code Review Assistant** and submit a pull request to the `xpander-ai/apps-by-agents` repository has been initiated. The task is currently queued for execution.\\n\\nI will monitor the progress and notify you once the task is completed. If you have any other requests or need further assistance, feel free to let me know!', content_type='str', thinking=None, reasoning_content=None, messages=[Message(role='system', content=\"I am the Software Engineering (SWE) Agent, a specialized AI designed to manage and execute coding-related tasks within an organizational..."
-]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "swe_agent.run(prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### While it's running, continue with the workshop to connect the slack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4: Connect to Slack\n",
+    "\n",
+    "### Build Slack Agent with Zero Infrastructure\n",
+    "\n",
+    "1. **Watch setup video**: https://assets.xpanderai.io/vidoes/workshops/august-2025/02-slack.mp4\n",
+    "\n",
+    "2. **Create a Slack channel**: `swe-agent-tasks-[yourname]`\n",
+    "\n",
+    "3. **Configure Smart Engage**:\n",
+    "   - Go to your agent settings\n",
+    "   - Enable Slack integration\n",
+    "   - Connect to your workspace\n",
+    "   - Select your channel\n",
+    "\n",
+    "4. **Test it**: \n",
+    "   - Watch demo: https://assets.xpanderai.io/vidoes/workshops/august-2025/summarize-pr.mp4\n",
+    "   - Send a message in Slack asking to summarize a PR\n",
+    "   - Your agent will respond!\n",
+    "\n",
+    "Your SWE agent now monitors Slack and can execute tasks (including background tasks) from messages!"
    ]
   },
   {
@@ -657,33 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4: Connect to Slack\n",
-    "\n",
-    "### Build Slack Agent with Zero Infrastructure\n",
-    "\n",
-    "1. **Watch setup video**: https://assets.xpanderai.io/vidoes/workshops/august-2025/02-slack.mp4\n",
-    "\n",
-    "2. **Create a Slack channel**: `swe-agent-tasks-[yourname]`\n",
-    "\n",
-    "3. **Configure Smart Engage**:\n",
-    "   - Go to your agent settings\n",
-    "   - Enable Slack integration\n",
-    "   - Connect to your workspace\n",
-    "   - Select your channel\n",
-    "\n",
-    "4. **Test it**: \n",
-    "   - Watch demo: https://assets.xpanderai.io/vidoes/workshops/august-2025/summarize-pr.mp4\n",
-    "   - Send a message in Slack asking to summarize a PR\n",
-    "   - Your agent will respond!\n",
-    "\n",
-    "Your SWE agent now monitors Slack and can execute tasks (including background tasks) from messages!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 5: Add Notion Task Management\n",
+    "## Part 5: Add Notion Task Management (Optional)\n",
     "\n",
     "### Make Your Agent Fully Autonomous\n",
     "\n",
